# spengine

./: .gitignore  CMakeLists.txt  glad.c  learn_open_gl.sln  main.cpp  shader.h  texture.h
learn_open_gl/: learn_open_gl.vcxproj
res/: wisp.gltf
res/shaders/: main.frag  main.vert
res/shaders/shadetober/: ripe.frag
shaders/: main.frag  main.vert
shaders/shadetober/: shaders.json
